--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>IR-LDCE Quiz</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    .site-header .navbar-brand img { vertical-align: middle; }
+    .site-header .navbar-main .navbar-nav .nav-link { font-weight: bold; letter-spacing: 0.5px; }
+    @media (max-width: 991.98px) {
+      .site-header .navbar-main .navbar-nav { width: 100%; }
+      .site-header .navbar-main .navbar-nav .nav-item { width: 100%; }
+      .site-header .navbar-main .navbar-nav .nav-link,
+      .site-header .navbar-main .navbar-nav .btn { width: 100%; text-align: left; margin-left: 0; }
+    }
+  </style>
+</head>
+<body>
 <!-- HEADER START -->
 <header class="site-header">
   <div class="bg-warning py-2">
