--- a/index.html
+++ b/index.html
@@ -95,6 +95,17 @@
       margin-top: 70px;
       padding: 20px;
     }
+    @media (min-width: 768px) {
+      .menu-icon {
+        display: none;
+      }
+      nav {
+        left: 0 !important;
+      }
+      main {
+        margin-left: 250px;
+      }
+    }
   </style>
 </head>
 <body>
