--- a/index.html
+++ b/index.html
@@ -2,155 +2,183 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IndiaBIX Clone</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>IndiaBIX Style Homepage</title>
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      margin: 0;
+      background-color: #f5f7fa;
     }
+
+    /* Header & Navigation */
     header {
-      background: #ffffff;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      background-color: #004080;
+      color: white;
+      padding: 15px 20px;
+      position: relative;
+    }
+
+    nav {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 10px 20px;
-      position: fixed;
-      width: 100%;
-      z-index: 1000;
     }
+
     .logo {
-      display: flex;
-      align-items: center;
-    }
-    .logo span {
-      font-size: 24px;
+      font-size: 1.8rem;
       font-weight: bold;
     }
-    .logo .green {
-      color: #38c924;
-    }
-    .logo .blue {
-      color: #00c5ff;
-    }
-    .menu-icon {
-      font-size: 24px;
-      cursor: pointer;
-    }
-    nav {
-      position: fixed;
-      top: 0;
-      left: -250px;
-      width: 250px;
-      height: 100%;
-      background: #fff;
-      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-      padding-top: 60px;
-      overflow-y: auto;
-      transition: left 0.3s ease;
-      z-index: 999;
-    }
-    nav.active {
-      left: 0;
-    }
-    nav ul {
+
+    ul.menu {
       list-style: none;
+      display: flex;
+      gap: 20px;
+      margin: 0;
       padding: 0;
     }
-    nav ul li {
-      padding: 15px 20px;
-      border-bottom: 1px solid #e0e0e0;
-    }
-    nav ul li a {
-      text-decoration: none;
-      color: #333;
-      font-size: 16px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    .login-section {
-      margin-top: 30px;
-      padding: 15px 20px;
-      display: flex;
-      justify-content: space-between;
-    }
-    .login-section button {
-      padding: 8px 12px;
-      border: none;
-      border-radius: 4px;
-      background: #007bff;
+
+    ul.menu li a {
       color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .hamburger {
+      display: none;
+      flex-direction: column;
       cursor: pointer;
     }
-    .contact {
-      padding: 20px;
-      font-size: 14px;
-      color: #555;
-      border-top: 1px solid #ddd;
+
+    .hamburger div {
+      width: 25px;
+      height: 3px;
+      background: white;
+      margin: 4px 0;
     }
-    main {
-      margin-top: 70px;
-      padding: 20px;
-    }
-    @media (min-width: 768px) {
-      .menu-icon {
+
+    @media (max-width: 768px) {
+      ul.menu {
         display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        background: #004080;
+        width: 100%;
+        padding: 10px 0;
       }
-      nav {
-        left: 0 !important;
+
+      ul.menu.active {
+        display: flex;
       }
-      main {
-        margin-left: 250px;
+
+      .hamburger {
+        display: flex;
       }
+    }
+
+    /* Main Content */
+    main {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 20px;
+    }
+
+    .content {
+      flex: 3;
+      min-width: 250px;
+      padding: 20px;
+    }
+
+    .sidebar {
+      flex: 1;
+      min-width: 200px;
+      padding: 20px;
+      background-color: #e0ecff;
+      border-left: 1px solid #ccc;
+    }
+
+    .card {
+      background-color: white;
+      margin-bottom: 20px;
+      padding: 15px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      border-radius: 8px;
+    }
+
+    h2 {
+      color: #004080;
+    }
+
+    /* Footer */
+    footer {
+      background-color: #004080;
+      color: white;
+      text-align: center;
+      padding: 20px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <span class="green">India</span><span class="blue">BIX</span>
-    </div>
-    <div class="menu-icon" onclick="toggleMenu()">
-      &#9776;
-    </div>
-  </header>
 
-  <nav id="sidebar">
-    <ul>
-      <li><a href="#">🏠 Home</a></li>
-      <li><a href="#">📐 Arithmetic Aptitude</a></li>
-      <li><a href="#">📊 Data Interpretation</a></li>
-      <li><a href="#">📄 Verbal Ability</a></li>
-      <li><a href="#">🔄 Logical Reasoning</a></li>
-      <li><a href="#">🔠 Verbal Reasoning</a></li>
-      <li><a href="#">📘 Nonverbal Reasoning</a></li>
-      <li><a href="#">⏰ Online Tests</a></li>
-      <li><a href="#">🌐 Current Affairs</a></li>
-      <li><a href="#">💡 General Knowledge</a></li>
+<header>
+  <nav>
+    <div class="logo">IndiaBIX</div>
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <ul class="menu" id="navMenu">
+      <li><a href="#">Aptitude</a></li>
+      <li><a href="#">Reasoning</a></li>
+      <li><a href="#">Verbal</a></li>
+      <li><a href="#">Technical</a></li>
+      <li><a href="#">Interviews</a></li>
     </ul>
-    <div class="login-section">
-      <button>Login</button>
-      <button>Logout</button>
-    </div>
-    <div class="contact">
-      📞 Contact Us<br/>
-      ✉️ support@indiabix.com
-    </div>
   </nav>
+</header>
 
-  <main>
-    <h1>Welcome to IndiaBIX</h1>
-    <p>Your go-to platform for placement preparation, aptitude, reasoning, and more!</p>
-  </main>
+<main>
+  <div class="content">
+    <div class="card">
+      <h2>Welcome to IndiaBIX</h2>
+      <p>IndiaBIX provides hundreds of aptitude questions, interview questions, and online test practice material for exams like UPSC, GATE, and placement interviews.</p>
+    </div>
 
-  <script>
-    function toggleMenu() {
-      const nav = document.getElementById("sidebar");
-      nav.classList.toggle("active");
-    }
-  </script>
+    <div class="card">
+      <h2>Latest Questions</h2>
+      <ul>
+        <li>Aptitude: Boats and Streams - Q23</li>
+        <li>Logical Reasoning: Number Series - Q12</li>
+        <li>Verbal: Sentence Correction - Q6</li>
+      </ul>
+    </div>
+  </div>
+
+  <aside class="sidebar">
+    <div class="card">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="#">Quantitative Aptitude</a></li>
+        <li><a href="#">Logical Reasoning</a></li>
+        <li><a href="#">HR Interview</a></li>
+        <li><a href="#">Online Tests</a></li>
+      </ul>
+    </div>
+  </aside>
+</main>
+
+<footer>
+  &copy; 2025 IndiaBIX Clone. All Rights Reserved.
+</footer>
+
+<script>
+  function toggleMenu() {
+    document.getElementById('navMenu').classList.toggle('active');
+  }
+</script>
+
 </body>
 </html>
