--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>IndiaBIX Style Homepage</title>
+  <title>IR-LDCE Homepage</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -96,7 +96,7 @@
       min-width: 200px;
       padding: 20px;
       background-color: #e0ecff;
-      border-left: 1px solid #ccc;
+      border-left: 20px solid #ccc;
     }
 
     .card {
@@ -124,7 +124,7 @@
 
 <header>
   <nav>
-    <div class="logo">IndiaBIX</div>
+    <div class="logo">IR-LDCE</div>
     <div class="hamburger" onclick="toggleMenu()">
       <div></div>
       <div></div>
@@ -143,8 +143,8 @@
 <main>
   <div class="content">
     <div class="card">
-      <h2>Welcome to IndiaBIX</h2>
-      <p>IndiaBIX provides hundreds of aptitude questions, interview questions, and online test practice material for exams like UPSC, GATE, and placement interviews.</p>
+      <h2>Welcome to IR-LDCE</h2>
+      <p>IR-LDCE provides hundreds of Manual Based questions, technical questions, and online test practice material for exams like LDCE-AEN and placement interviews.</p>
     </div>
 
     <div class="card">
@@ -171,7 +171,7 @@
 </main>
 
 <footer>
-  &copy; 2025 IndiaBIX Clone. All Rights Reserved.
+  &copy; 2025 IR-LDCE. All Rights Reserved.
 </footer>
 
 <script>
