--- a/index.html
+++ b/index.html
@@ -131,11 +131,16 @@
       <div></div>
     </div>
     <ul class="menu" id="navMenu">
-      <li><a href="#">Aptitude</a></li>
-      <li><a href="#">Reasoning</a></li>
-      <li><a href="#">Verbal</a></li>
-      <li><a href="#">Technical</a></li>
-      <li><a href="#">Interviews</a></li>
+      <li><a href="#">🏠 Home</a></li>
+      <li><a href="#">📐 Arithmetic Aptitude</a></li>
+      <li><a href="#">📊 Data Interpretation</a></li>
+      <li><a href="#">📄 Verbal Ability</a></li>
+      <li><a href="#">🔄 Logical Reasoning</a></li>
+      <li><a href="#">🔠 Verbal Reasoning</a></li>
+      <li><a href="#">📘 Nonverbal Reasoning</a></li>
+      <li><a href="#">⏰ Online Tests</a></li>
+      <li><a href="#">🌐 Current Affairs</a></li>
+      <li><a href="#">💡 General Knowledge</a></li>
     </ul>
   </nav>
 </header>
