--- a/index.html
+++ b/index.html
@@ -125,22 +125,27 @@
 <header>
   <nav>
     <div class="logo">IR-LDCE</div>
+    <div class="d-flex align-items-center">
+      <a href="register.html" id="registerLink" class="text-dark fw-bold me-3 d-none d-lg-inline">Register</a>
+          <a href="login.html" id="loginLink" class="text-dark fw-bold me-3 d-none d-lg-inline">Login</a>
+          <button id="logoutButton" class="btn btn-outline-dark btn-sm fw-bold d-none d-lg-inline">Logout</button>
+        </div>
     <div class="hamburger" onclick="toggleMenu()">
       <div></div>
       <div></div>
       <div></div>
     </div>
     <ul class="menu" id="navMenu">
-      <li><a href="#">🏠 Home</a></li>
-      <li><a href="#">📐 Arithmetic Aptitude</a></li>
-      <li><a href="#">📊 Data Interpretation</a></li>
-      <li><a href="#">📄 Verbal Ability</a></li>
-      <li><a href="#">🔄 Logical Reasoning</a></li>
-      <li><a href="#">🔠 Verbal Reasoning</a></li>
-      <li><a href="#">📘 Nonverbal Reasoning</a></li>
-      <li><a href="#">⏰ Online Tests</a></li>
-      <li><a href="#">🌐 Current Affairs</a></li>
-      <li><a href="#">💡 General Knowledge</a></li>
+      <li><a href="#"> 🏠 Home</a></li>
+      <li><a href="#"> 📐 Arithmetic Aptitude</a></li>
+      <li><a href="#"> 📊 Data Interpretation</a></li>
+      <li><a href="#"> 📄 Verbal Ability</a></li>
+      <li><a href="#"> 🔄 Logical Reasoning</a></li>
+      <li><a href="#"> 🔠 Verbal Reasoning</a></li>
+      <li><a href="#"> 📘 Nonverbal Reasoning</a></li>
+      <li><a href="#"> ⏰ Online Tests</a></li>
+      <li><a href="#"> 🌐 Current Affairs</a></li>
+      <li><a href="#"> 💡 General Knowledge</a></li>
     </ul>
   </nav>
 </header>
