--- a/index.html
+++ b/index.html
@@ -157,8 +157,22 @@
       <p>IR-LDCE provides hundreds of Manual Based questions, technical questions, and online test practice material for exams like LDCE-AEN and placement interviews.</p>
     </div>
 
+    <h2 class="mb-3 text-center">Available Quizzes</h2>
+   <div class="quiz-list d-grid gap-2">
+        <button class="btn btn-outline-primary manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
+        <button class="btn btn-outline-primary manual-btn" data-manual="irpwm">2. Indian Railway P-way Manual</button>
+        <button class="btn btn-outline-primary manual-btn" data-manual="irdim">3. Indian Railway Schedule of Dimensions</button>
+        <button class="btn btn-outline-primary manual-btn" data-manual="irec">4. Indian Railway Engineering Code</button>
+        <button class="btn btn-outline-primary manual-btn" data-manual="stm">5. Small Track Machine Manual</button>
+        <button class="btn btn-outline-primary manual-btn" data-manual="usfd">6. USFD Manual</button>
+        <button class="btn btn-outline-primary manual-btn" data-manual="fbwm">7. FBW Manual</button>
+        <button class="btn btn-outline-primary manual-btn" data-manual="store">8. Store Manual</button>
+        <button class="btn btn-outline-primary manual-btn" data-manual="account">9. Account Manual</button>
+        <button class="btn btn-outline-primary manual-btn" data-manual="pyq2022">10. PYQ 30% Main 2022</button>
+     <button class="btn btn-outline-primary manual-btn" data-manual="pyq2021">11. PYQ 30% Main 2021</button>
+      </div>
     <div class="card">
-      <h2>Latest Questions</h2>
+      <h3>Latest Questions</h3>
       <ul>
         <li>Aptitude: Boats and Streams - Q23</li>
         <li>Logical Reasoning: Number Series - Q12</li>
