--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </div>
 
     <h2 class="mb-3 text-center">Available Quizzes</h2>
-   <div class="quiz-list d-grid gap-2">
+   <div class="card">
         <button class="btn btn-outline-primary manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
         <button class="btn btn-outline-primary manual-btn" data-manual="irpwm">2. Indian Railway P-way Manual</button>
         <button class="btn btn-outline-primary manual-btn" data-manual="irdim">3. Indian Railway Schedule of Dimensions</button>
